# oslo.versionedobjects

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements-py3.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  examples.rst  index.rst  installation.rst  usage.rst
doc/source/api/: exception.rst  fixture.rst
doc/source/install/: index.rst
doc/source/reference/: base.rst  exception.rst  fields.rst  fixture.rst
doc/source/user/: index.rst  typing.rst  usage.rst
oslo.versionedobjects/locale/: oslo.versionedobjects-log-error.pot  oslo.versionedobjects.pot
oslo.versionedobjects/locale/en_GB/LC_MESSAGES/: oslo.versionedobjects-log-error.po  oslo.versionedobjects.po
oslo.versionedobjects/locale/fr/LC_MESSAGES/: oslo.versionedobjects-log-error.po
oslo_versionedobjects/: __init__.py  _i18n.py  _options.py  _utils.py  base.py  checks.py  exception.py  fields.py  fixture.py  mypy.py  test.py  utils.py
oslo_versionedobjects/examples/: iot_bulb.py
oslo_versionedobjects/locale/: oslo_versionedobjects-log-error.pot  oslo_versionedobjects.pot
oslo_versionedobjects/locale/en_AU/LC_MESSAGES/: oslo_versionedobjects-log-error.po
oslo_versionedobjects/locale/en_GB/LC_MESSAGES/: oslo_versionedobjects-log-error.po  oslo_versionedobjects.po
oslo_versionedobjects/locale/es/LC_MESSAGES/: oslo_versionedobjects-log-error.po
oslo_versionedobjects/locale/fr/LC_MESSAGES/: oslo_versionedobjects-log-error.po
oslo_versionedobjects/locale/it/LC_MESSAGES/: oslo_versionedobjects-log-error.po
oslo_versionedobjects/openstack/common/: _i18n.py  versionutils.py
oslo_versionedobjects/tests/: obj_fixtures.py  test_exception.py  test_fields.py  test_fixture.py  test_mypy.py  test_objects.py  test_utils.py
playbooks/legacy/oslo.versionedobjects-src-grenade-devstack-multinode/: run.yaml
releasenotes/notes/: deprecate-remotable_classmethod-3c7d0f658af39fb6.yaml  remove-field-staticmethods-62f5a62b2544b603.yaml  remove-test-helpers-032475d5bc2ec8ca.yaml  update_md5_for_fips-e5a8f8f438ac81fb.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
