[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.versionedobjects"
description = "Oslo Versioned Objects library"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.versionedobjects"
Repository = "https://opendev.org/openstack/oslo.versionedobjects"

[project.entry-points."oslo.config.opts"]
"oslo.versionedobjects" = "oslo_versionedobjects._options:list_opts"

[tool.setuptools]
packages = [
    "oslo_versionedobjects"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ['B303']
