[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.versionedobjects"
description = "Oslo Versioned Objects library"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.versionedobjects"
Repository = "https://opendev.org/openstack/oslo.versionedobjects"

[project.entry-points."oslo.config.opts"]
"oslo.versionedobjects" = "oslo_versionedobjects._options:list_opts"

[tool.setuptools]
packages = [
    "oslo_versionedobjects"
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "G", "LOG", "S", "UP"]
ignore = [
    "S101",  # asserts are only used for type narrowing
]
external = ["H"]

[tool.ruff.lint.per-file-ignores]
"oslo_versionedobjects/tests/*" = ["S"]
"oslo_versionedobjects/mypy.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
plugins = ["oslo_versionedobjects.mypy"]
show_column_numbers = true
show_error_context = true
# strict = true
disable_error_code = ["import-untyped"]
exclude = '(?x)(doc | releasenotes)'

[[tool.mypy.overrides]]
module = ["oslo_versionedobjects.tests.*"]
disable_error_code = ["import-untyped"]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false
