[metadata]
name = oslo.versionedobjects
summary = Oslo Versioned Objects library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/oslo
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    oslo_versionedobjects

[extras]
fixtures =
  mock!=1.1.4,>=1.1:python_version!='2.6'
  mock==1.0.1:python_version=='2.6'
  fixtures>=1.3.1

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo.versionedobjects/locale
domain = oslo.versionedobjects

[update_catalog]
domain = oslo.versionedobjects
output_dir = oslo.versionedobjects/locale
input_file = oslo.versionedobjects/locale/oslo.versionedobjects.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.versionedobjects/locale/oslo.versionedobjects.pot

[wheel]
universal = true
