[metadata]
name = oslo.versionedobjects
summary = Oslo Versioned Objects library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/oslo.versionedobjects/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oslo_versionedobjects

[entry_points]
oslo.config.opts =
    oslo.versionedobjects = oslo_versionedobjects._options:list_opts

[extras]
fixtures =
  mock>=2.0 # BSD
  fixtures>=3.0.0 # Apache-2.0/BSD

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_versionedobjects/locale
domain = oslo_versionedobjects

[update_catalog]
domain = oslo_versionedobjects
output_dir = oslo_versionedobjects/locale
input_file = oslo_versionedobjects/locale/oslo_versionedobjects.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_versionedobjects/locale/oslo_versionedobjects.pot

[wheel]
universal = true
